[package]
name = "pong"
version = "0.1.0"
authors = ["Samdal <samdal@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
rand = "0.7.3"
cgmath = { version = "0.17", features = ["mint"]}
gfx = "0.18"

